# gitbook

./: noxfile.py  pyproject.toml
.github/workflows/: ci.yml
gitbook/: client.py  endpoint.py  endpoints.py
gitbook/abc/: model.py
gitbook/models/: organization.py  space.py  user.py
