[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.ruff]
extend-select = [
    # isort
    "I001",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.poetry]
name = "gitbook"
version = "0"
description = "Python library for interacting with GitBook's API."
authors = ["CircuitSacul <circuitsacul@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.4"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
nox = "^2022.8.7"
mypy = "^0.971"
black = "^23.1.0"
ruff = "^0.0.258"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
